# Breast_Cancer_Detection_Project

./: Business-and-data-science-objectives.txt  DSO 1.ipynb  DSO2 .ipynb  DSO2.ipynb  Projet final MLA.ipynb  Projet final MLAA.ipynb  README.md  Untitled1 (1).ipynb  medical_summary_report.txt  model_comparison_results.joblib  model_results.csv  softmax_regression_final.joblib  standard_scaler.joblib  svm_l2_final.joblib
.ipynb_checkpoints/: Projet final MLA-checkpoint.ipynb  Projet-final-MLA-checkpoint.ipynb
MLOPS Pipeline/: Makefile  evaluate1.py  evaluate2.py  evaluate3.py  main.py  modeling1.py  modeling2.py  modeling3.py  prepare1.py  prepare2.py  prepare3.py  requirements.txt
Website/: app.py  pyproject.toml
Website/models/: clinical_features.pkl  clinical_scaler.pkl  tumor_model.pkl
Website/static/css/: style.css
Website/static/js/: main.js
Website/templates/: base.html  clinical.html  histopathology.html  index.html  tumor.html  upload_models.html
